--- a/dependency-injection/src/app/intro/intro.component.html
+++ b/dependency-injection/src/app/intro/intro.component.html
@@ -5,11 +5,8 @@
   </p>
 
   <p>
-  Many of the examples use console.log so make sure you have your
-  browser's console open to see the debugging messages.
+  Use console.log to see results
   </p>
 
-  <p>
-  -- The ng-book team
-  </p>
+  
 </div>
