--- a/dependency-injection/src/app/app.component.html
+++ b/dependency-injection/src/app/app.component.html
@@ -1,14 +1,10 @@
 <!-- Menu Bar -->
 <div class="ui menu">
   <div class="ui container">
-    <a href="#" class="header item">
-      <img class="logo"
-           src="assets/images/ng-book-2-minibook.png" />
-      ng-book
-    </a>
+    
     <div class="header item borderless">
       <h1 class="ui header">
-        Angular Dependency Injection
+        Dependency Injection
       </h1>
     </div>
   </div>
